corrected mistake in the presentation

--- a/tex Files/index.tex
+++ b/tex Files/index.tex
@@ -35,6 +35,10 @@
 
 \begin{document}
 
+
+\fancyhead[l]{\parbox[b]{.5\textwidth}{\color{color2} INTVM01/1819 :/: 1422594 
+}}
+
 \makecvtitle % Print the CV title
 
 %--------------------------------------------------------------------
@@ -42,7 +46,7 @@
 \section{Major Project}
 
 \cvitem{Title}{\emph{Smart conversational shopping assistant}}
-\cvitem{Description}{A conversational shopping assistant AI bot that helps user buy product at the best price from various providers. It remembers the user's preference and helps by giving recommendation. The bot uses NLP and Machine Learning for the conversational flow, Query optimisation and scaline decomposition for recommendation on incomplete dataset. The backend is based on django and processing is done via \emph{scikit-learn} and \emph{tensor Flow}. The dialog flow is based on \emph{Google dialog flow}. Springer paper link for the same will be available after peer review. The patent for the same is pending.}
+\cvitem{Description}{A conversational shopping assistant AI bot that helps user buy product at the best price from various providers. It remembers the user's preference and helps by giving recommendation. The bot uses NLP and Machine Learning for the conversational flow, Query optimisation and scaline decomposition for recommendation on incomplete dataset. The backend is based on django and processing is done via \emph{scikit-learn} and \emph{tensor Flow}. The dialog flow is based on \emph{Google dialog flow}. Springer paper link for the same will be available after peer review.}
 
 %----------------------------------------------------------------------------------------
 %	Projects
@@ -63,7 +67,7 @@
 \section{Projects and Internships}
 
 
-\cventry{2018}{ABM \& Brothers}{\textsc{droplets, DNS, digital Ocean, Cloud Computing}}{}{}{ Deployed a invoicePlan site for a Transport company named \href{http://139.59.85.218/ip/index.php/}{\color{blue}ABM \& Brothers} on digital Oceans.}
+\cventry{2018}{ABM \& Brothers}{\textsc{droplets, DNS, digital Ocean, LAMP}}{}{}{ Deployed a invoicePlan site for a Transport company named \href{http://139.59.85.218/ip/index.php/}{\color{blue}ABM \& Brothers} on digital Oceans.}
 
 \cventry{project}{Social Network}{\textsc{Flask Social Network}}{}{}{A social platform for giving feedback and texting other users }
 
@@ -119,9 +123,7 @@ The app for the academics. Very useful for thesis and those who want to summaris
 
 \section{Presentations}
 
-\cvitem{AlphaZero beamer }{Deep mind alpha zero and the the brilliant use of the reinforcement Learning Algorithm  \href{https://www.dropbox.com/s/839fmc9ck3oqyxh/main.pdf?dl=0}{\color{blue}AlphaZero} presentation. Please have a look.A very informative and beautifully typeset in \LaTeX}
-
-\cvitem{SMB beamer }{Deep mind alpha zero and the the brilliant use of the reinforcement Learning Algorithm  \href{https://www.dropbox.com/s/839fmc9ck3oqyxh/main.pdf?dl=0}{\color{blue}AlphaZero} presentation. Please have a look.A very informative and beautifully typeset in \LaTeX}
+\cvitem{ AlphaZero beamer }{Deep mind alpha zero and the the brilliant use of the reinforcement Learning Algorithm  \href{https://www.dropbox.com/s/839fmc9ck3oqyxh/main.pdf?dl=0}{\color{blue}AlphaZero} presentation. Please have a look.A very informative and beautifully typeset in \LaTeX}
 
 \section{Achievements and Award}
 \cvitem{Jan -- 2018}{Top 1500 Rank in world - Codechef Jan Long Challenge - \href{https://www.codechef.com/users/arvind2222}{\color{blue} Jan Long}}
@@ -157,8 +159,7 @@ The app for the academics. Very useful for thesis and those who want to summaris
 \cvitem{Composition}{I like composition and it's design impact.\href{https://legfeet.wordpress.com}{\color{blue} Photography} }
 
 
-\fancyfoot[l]{\parbox[b]{.8\textwidth}{\color{color2}\addressfont\itshape Proudly made in 
-\href{https://www.dropbox.com/s/2zphv58tsk08q04/code.pdf?dl=0}{\color{blue}\LaTeX}}}
+\fancyfoot[l]{\parbox[b]{.8\textwidth}{\color{color2}\addressfont\itshape Proudly made in \LaTeX \\ }}
 
 
 \end{document}
