after adding running link

--- a/tex Files/index tcs.tex
+++ b/tex Files/index tcs.tex
@@ -36,7 +36,8 @@
 \begin{document}
 
 
-%\fancyhead[l]{\parbox[b]{.5\textwidth}{\color{color2} INTVM01/1819 :/: 1422594 }}
+\fancyhead[l]{\parbox[b]{.5\textwidth}{\color{color2} INTVM01/1819 :/: 1422594 
+}}
 
 \makecvtitle % Print the CV title
 
