edits in in some runing part

--- a/run/running.tex
+++ b/run/running.tex
@@ -27,12 +27,13 @@ I read somewhere,
 	\say{You overestimate what you could do in a day and always underestimate what you could do in a year}
 \end{quote} 
 
-That is exactly what happened. I was running 4 km without any problems. My weight was an all time low 91kg. I was happy but only If it was true. My weight was low but not exactly that. I was still visible fat and my family was still in the pain as dad chemotherapy started. I was going through a rough time of my life.
+That is exactly what happened. I was running 4 km without any problems. My weight was an all time low 91kg. I was happy but only If it was true. My weight was low but not exactly that. I was still visibly fat and my family was still going through as dad chemotherapy started. I was going through a rough time in my life.
 
 
 \section*{Why You Should Run ?}
+All the things I told you was the part of the process that led me to a firm believer of exercise and running in particular. 
 By now I would conclude because if you have reached here, you go out run and don't cheat on the only self you have got. You are already into it. It's difficult but again nothing worth achieving is easy. \\
-For me running is the most sacred thing. And it can be for you too. It will be with you even if you get poor or rich. It would take care of you even if get old. And nurture you when you get old. When you run you give life a chance and most importantly you give yourself a chance to experience life differently. And when most of us are busy with our life it will be that one thing that will tell you about your self most truly than anyone else. So go out and run. 
+For me running is the most sacred thing. And it will be for you too. It will be with you even if you get poor or rich. It would take care of you even if get old. And nurture you when you get old. When you run you give life a chance and most importantly you give yourself a chance to experience life differently. And when most of us are busy with our life it will be that one thing that will tell you about our self most truly than anyone else. So go out and run. 
 
 
 
