after adding certification

--- a/run/running.tex
+++ b/run/running.tex
@@ -15,8 +15,7 @@
 \maketitle
 
 \section*{When life Hits you with a Brick}
-It was my second year of engineering and my dad was diagnosed with a stage 2 cancer. We are a strong family of 6 people but everyone of us was shocked. My mom used to cry thinking about all the consequences. Me being the eldest son, what I could do. I was going through a very critical phase of my life. My dad recovered, went through a major surgery and it was all done. It was only possible because there existed TATA. Tata Memorial Institute took my dad's case and Tata Memorial Centre took most of the burden of the surgery and medicine cost. I will be joining TCS. I don't know the future about me but I am very much pleased about way its taking.
-
+It was my second year of engineering and my dad was diagnosed with a stage 2 cancer. We are a strong family of 6 people but everyone of us was shocked. My mom used to cry thinking about all the consequences. Me being the eldest son, what I could do. I was going through a very critical phase of my life. My dad recovered, went through a major surgery and it was all done. It was only possible because there existed TATA. Tata Memorial Institute took my dad's case and Tata Memorial Centre took most of the burden of the surgery.  
 \section*{ Make a Home out of it }
 While all this was going on, never realised I went from a 90 kg to 125kg. I used to get tired even from small walks to the store. I thought of going gym but could never convince my mom about it. 
 But day after day I thought of doing something. I tried running one day and had a cap burst from my nose. I started bleeding. This was a start of a very phase of my life. When we all get fat we cannot control the desires for the food but we can almost always control how we handle our life after it. I used to eat whatever I wanted and starting running at night before dinner. Only reason because I could not get up in the morning and would have come up with some pretty good reason.\\
